<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>
    <string name="password">Password*</string>
    <string name="username">Email*</string>
    <string name="register_details">Please, Enter your Username and Password!</string>
    <string name="OnSlideMenu">Hello Everyone!!</string>
    <string name="share">Share</string>
    
     <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="fullname">FullName*</string>
    <string name="app_id">543353852450412</string>
    <string name="check">Check Button</string>

</resources>
