<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<include
    layout ="@layout/facebook_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        style="@style/password"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/usernameTextView"
        style="@style/password"
        android:layout_above="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:text="@string/username" />

    <TextView
        android:id="@+id/registerdetailsTextView"
        style="@style/password"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register_details"
        android:textColor="#ff0000" />

    <Button
        android:id="@+id/button1"
        style="@style/text.Size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/register" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameTextView"
        android:layout_alignLeft="@+id/usernameTextView"
        android:layout_alignRight="@+id/usernameTextView"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        style="@style/password"
        android:layout_above="@+id/fullname"
        android:layout_alignLeft="@+id/fullname"
        android:layout_alignRight="@+id/fullname"
        android:text="@string/fullname" />

</RelativeLayout>